# kitten-next

./: .code-workspace  app.yaml  hosts  kitten-next.code-workspace
answers/: .gitignore  Dockerfile  Makefile  pyproject.toml
answers/answers/adapters/: repository.py
answers/answers/adapters/db/: __init__.py  answer.py  db_models.py  question.py  user.py
answers/answers/adapters/json_file/: database.py  repository.py
answers/answers/adapters/repository/: __init__.py  sql_alchemy.py
answers/answers/adapters/sqlalchemy/: database.py  db_models.py  repository.py
answers/answers/domain/: __init__.py  aggregate.py  bootstrap.py  comands.py  commands.py  models.py  specification.py  utils.py
answers/answers/domain/abstract/: database.py  exceptions.py  repository.py
answers/answers/domain/exceptions/: repository_exc.py
answers/answers/entrypoints/: cli.py
answers/answers/entrypoints/api/: __init__.py  app_builder.py  dependencies.py  exc_handlers.py  routers.py
answers/answers/entrypoints/bot/: __init__.py
answers/answers/service_layer/: question.py  unit_of_work.py
answers/answers/settings/: __init__.py
answers/tests/: conftest.py
answers/tests/api/: conftest.py  test_api.py
answers/tests/domain/: test_comands.py
answers/tests/domain/aggregate/: test_importer.py
answers/tests/unit/repositary/: conftest.py  test_answer.py  test_answers.py  test_fake.py  test_fake_options.py  test_fake_question.py  test_question.py  test_questions.py  test_t.py  test_tag.py  test_user.py  test_validate_answer.py
deploy/: .env.example  Dockerfile.tg  app.yaml  (+3 more)
(+29 files in other folders)
